resources/css/app.css
@tailwind base;

a {
  @apply text-blue-600;
}

a:hover {
  @apply text-red-600;
}

[v-cloak] {
  @apply hidden;
}

/*
|
|====================================================
| v-tooltip
|====================================================
|
|
*/

.tooltip {
  z-index: 1000000;

  @apply block;
}

.tooltip .tooltip-inner {
  max-width: 16rem;

  @apply py-1 px-2 text-base antialiased bg-white text-gray-900 border border-gray-100 shadow-lg;
}

.tooltip .tooltip-arrow {
  @apply w-0 h-0 m-1 border absolute border-black z-10;
}

.tooltip[x-placement^="bottom"] {
  @apply mt-1;
}

.tooltip[x-placement^="bottom"] .tooltip-arrow {
  border-bottom-color: #f7fafc;
  border-left-color: transparent;
  border-right-color: transparent;
  border-top-color: transparent;
  top: -0.25rem;
  left: calc(50% - 0.25rem);

  @apply my-0 border-r-4 border-l-4 border-b-4;
}

.tooltip.popover .popover-inner {
  @apply p-6 shadow-lg;
}

/*
|
|====================================================
| leaflet
|====================================================
|
|
*/

.vue2leaflet-map.leaflet-container {
  @apply font-body;
}

.vue2leaflet-map .leaflet-popup-content-wrapper,
.vue2leaflet-map .leaflet-popup-content-wrapper .leaflet-popup-tip {
  background: #f7fafc;
}

.vue2leaflet-map .leaflet-popup-content-wrapper {
  @apply rounded-none;
}

.vue2leaflet-map.leaflet-container a {
  @apply text-blue-600;
}

.vue2leaflet-map .leaflet-bar a {
  @apply text-black;
}

.vue2leaflet-map.leaflet-container .leaflet-popup-content-wrapper a:hover {
  @apply text-red-600;
}

/*
|
|====================================================
| Back to tailwind...
|====================================================
|
|
*/

@tailwind components;
@tailwind utilities;

.hanging-indent {
  text-indent: -1.5rem;

  @apply pl-6;
}

.hyphenated * {
  @apply relative;
}

.hyphenated *:not(:first-child)::before {
  content: '-';
  position: absolute;
  left: -0.1rem;

  @apply text-gray-900;
}

.comma-list {
  @apply inline;
}

.comma-list li:not(:last-child)::after {
  content: ", ";
}

.small-caps {
  font-variant: small-caps;
}

